# bytely

./: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  compose.dev.yml  compose.prod.yml  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6747eae7969f_links_and_users_tables.py
app/: main.py
app/api/: url.py  user.py
app/core/: database.py  settings.py
app/models/: __init__.py  links.py  users.py
app/schemas/: __init__.py  url.py
docs/: about.md  index.md  strategy.md
infra/: prometheus.yml
scripts/: entrypoint.dev.sh  entrypoint.prod.sh
tests/unit/: test_shorten_redirect.py
